# django-poll-example

./: .gitignore  .pylintrc  README.md  db.sqlite3  manage.py  pyproject.toml
docs/img/: rreactpy-django.jpgZone.Identifier
mysite/: asgi.py  settings.py  urls.py
polls/: container.py  models.py  spa_router.py  tests.py  urls.py  views.py
polls/management/commands/: dumpurls.py
polls/pages/: __init__.py  common.py  detail_page.py  index_page.py  page_404.py  page_container.py  results_page.py
polls/static/: bootstrap.cssZone.Identifier
polls/templates/: index.html
polls/templates/polls/: detail.html  index.html  results.html
project/: db.sqlite3  urls.py
project/project/: settings.py
stj/: apps.py  components.py  urls.py
stj/templates/: index.html
utils/: inline_style.py  params.py
